--- a/src/app/page/listing/listing-bill/listing-bill.component.scss
+++ b/src/app/page/listing/listing-bill/listing-bill.component.scss
@@ -25,9 +25,10 @@ td {
   justify-content: flex-end,
 }
 
-.icon-white {
-  color: red;
-  font-size: 50px;
-  padding-right: 4px;
-
+.jump-top i {
+  color: #4098D4;
+  font-size: 60px;
+  position: fixed;
+  bottom: 50px;
+  right: 0px;
 }
