list table footer statistics added

--- a/src/app/pages/list-bill/list-bill.component.html
+++ b/src/app/pages/list-bill/list-bill.component.html
@@ -55,6 +55,11 @@
                   </td>
                 </tr>
               </tbody>
+              <tfoot>
+                <tr>
+                  <td [attr.colspan]="colspan" [innerHTML]="statBillText"></td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
