--- a/src/app/pages/list-category/list-category.component.html
+++ b/src/app/pages/list-category/list-category.component.html
@@ -53,6 +53,11 @@
                   </td>
                 </tr>
               </tbody>
+              <tfoot>
+                <tr>
+                  <td [attr.colspan]="colspan" [innerHTML]="statCategoryText"></td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
