--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -53,6 +53,11 @@
                   </td>
                 </tr>
               </tbody>
+              <tfoot>
+                <tr>
+                  <td [attr.colspan]="colspan" [innerHTML]="statCustomerText"></td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
