--- a/src/app/pages/list-order/list-order.component.html
+++ b/src/app/pages/list-order/list-order.component.html
@@ -50,6 +50,11 @@
                   </td>
                 </tr>
               </tbody>
+              <tfoot>
+                <tr>
+                  <td [attr.colspan]="colspan" [innerHTML]="statOrderText"></td>
+                </tr>
+              </tfoot>
             </table>
           </div>
         </div>
