--- a/src/app/pages/edit-customer/edit-customer.component.html
+++ b/src/app/pages/edit-customer/edit-customer.component.html
@@ -39,7 +39,7 @@
                         </div>
                 
                         <div class="form-group form__group">
-                            <label>email</label>
+                            <label>E-mail</label>
                             <input [(ngModel)]="customer.email" name="email" type="text" 
                                 class="form-control" pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.email?.valid"></i>
@@ -49,7 +49,7 @@
                         </div>
 
                         <div class="form-group form__group">
-                            <label>active</label>
+                            <label>Active</label>
                             <input [(ngModel)]="customer.active" name="active" type="checkbox" 
                                 class="form-check-input ml-2">
                         </div>
@@ -57,7 +57,7 @@
         
                     <div class="form__column">
                         <div class="form-group form__group">
-                            <label>zip</label>
+                            <label>Zip</label>
                             <input [(ngModel)]="customer.address.zip" name="address_zip" type="text" 
                                 class="form-control" pattern=".{4,20}" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.address_zip?.valid"></i>
@@ -67,7 +67,7 @@
                         </div>
 
                         <div class="form-group form__group">
-                            <label>country</label>
+                            <label>Country</label>
                             <input [(ngModel)]="customer.address.country" name="country" type="text" 
                                 class="form-control" pattern=".{5,50}" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.country?.valid"></i>
@@ -77,7 +77,7 @@
                         </div>
                 
                         <div class="form-group form__group">
-                            <label>city</label>
+                            <label>City</label>
                             <input [(ngModel)]="customer.address.city" name="city" type="text" 
                                 class="form-control" pattern=".{3,50}" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.city?.valid"></i>
@@ -87,7 +87,7 @@
                         </div>
                 
                         <div class="form-group form__group">
-                            <label>street</label>
+                            <label>Street</label>
                             <input [(ngModel)]="customer.address.street" name="street" type="text" 
                                 class="form-control" pattern=".{5,100}" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.street?.valid"></i>
@@ -97,7 +97,7 @@
                         </div>
                 
                         <div class="form-group form__group">
-                            <label>notes</label>
+                            <label>Notes</label>
                             <input [(ngModel)]="customer.address.notes" name="notes" type="text" 
                                 class="form-control" pattern=".{5,100}" required>
                             <i class="fa fa-exclamation-triangle alert__triangle" aria-hidden="true" [hidden]="customerForm.controls.notes?.valid"></i>
