--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,7 +4,7 @@
         <div class="card py-5 px-0">
             <div class="card-img"></div>
             <div class="card-body pt-5 w-75 px-5">
-                <h4 class="card-name p-0 m-0 mb-2">Eugene Maîtrise</h4>
+                <h4 class="card-name p-0 m-0 mb-2">Edmond Maîtrise</h4>
                 <h4 class="card-title p-0 m-0">Junior Frontend Developer</h4>
                 <div class="progress mt-5">
                     <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">HTML</div>
