Customer list init values

--- a/src/app/editors/edit-customer/edit-customer.component.html
+++ b/src/app/editors/edit-customer/edit-customer.component.html
@@ -83,8 +83,8 @@
                                 </div>
                             </div>
                             <button mat-raised-button [disabled]="customerFrom.invalid" class="btn btn-danger pull-right">
-                                <span *ngIf="customer.id>0">Update Profile</span>
-                                <span *ngIf="customer.id==0">Create Profile</span>
+                                <span *ngIf="customer.id>0">Update Customer</span>
+                                <span *ngIf="customer.id==0">Create Customer</span>
                             </button>
                             <div class="clearfix"></div>
                         </form>
