--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -1,11 +1,11 @@
 <div class="container top">
   <a class="jump-top" href="customers#top"><i class="fa fa-arrow-circle-up"></i></a>
   <div class="row">
-    <div class="col-4 offset-5 mb-5 mb-3 mt-0">
+    <div class="col-4 offset-5 mb-3 mt-0">
       <h2>VÁSÁRLÓK</h2>
     </div>
     <div class="col-12 my-3 mb-3">
-      <button class="btn btn-success btn-block mt-3 mb-5" style="font-size:14px" [routerLink]="[0]">
+      <button class="btn btn-success btn-block mt-3 mb-3" style="font-size:14px" [routerLink]="[0]">
         <i class="material-icons">add</i> ÚJ VÁSÁRLÓ LÉTREHOZÁSA
       </button>
     </div>
