--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
                     <div class="card-icon card-header-warning">
                         <i class="material-icons">location_on</i>
                     </div>
-                    <p class="card-category">Our Customers location</p>
+                    <p class="card-category">Find a store near You!</p>
                 </div>
                 <h3 class="card-title mt-3 mx-3">
                     <app-google-map></app-google-map>
