Customer list delet confirmation

--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -29,11 +29,11 @@
                                 <option *ngIf="attribute.type==='check'"
                                     [value]="attribute.key+',1'"
                                     [selected]="setDefault(attribute.key)">
-                                    {{attribute.title}} is true</option>
+                                    {{attribute.title}}</option>
                                 <option *ngIf="attribute.type==='check'"
                                     [value]="attribute.key+',0'"
                                     [selected]="setDefault(attribute.key)">
-                                    {{attribute.title}} is false</option>
+                                    Not {{attribute.title}}</option>
                             </ng-container>
                         </select>
 
@@ -47,10 +47,12 @@
                             <option value="50">50</option>
                         </select>
                         <label for="page" class="mx-2">Page: </label>
-                        <a class="page-link" (click)="pagination.onNextPage(0)"
+                        <a class="page-link" [ngClass]="{'disabled': pagination.page===1}"
+                            (click)="pagination.onNextPage(0)"
                             title="first"><span
                                 class="material-icons">first_page</span></a>
-                        <a class="page-link" (click)="pagination.onNextPage(-1)"
+                        <a class="page-link" [ngClass]="{'disabled': pagination.page===1}"
+                            (click)="pagination.onNextPage(-1)"
                             title="previous"><span
                                 class="material-icons">chevron_left</span></a>
                         <select id="page" class="custom-select width-3rem"
@@ -59,10 +61,11 @@
                             <option *ngFor="let i of pagination.pages"
                                 [value]="i">{{ i }}</option>
                         </select>
-                        <a class="page-link" (click)="pagination.onNextPage(1)"
+                        <a class="page-link" [ngClass]="{'disabled': pagination.page===pagination.pages.length}"
+                            (click)="pagination.onNextPage(1)"
                             title="next"><span
                                 class="material-icons">chevron_right</span></a>
-                        <a class="page-link"
+                        <a class="page-link" [ngClass]="{'disabled': pagination.page===pagination.pages.length}"
                             (click)="pagination.onNextPage(9999)"
                             title="last"><span
                                 class="material-icons">last_page</span></a>
@@ -111,8 +114,13 @@
                                                     class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger"
+                                                <!-- <button class="btn btn-danger"
                                                     (click)="onDelete(customer)">
+                                                    <i class="fa fa-trash"></i>
+                                                </button> -->
+                                                <button class="btn btn-danger" data-toggle="modal"
+                                                    data-target="#confirmationDialog"
+                                                    (click)="setCustomerDelete(customer)">
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </div>
@@ -123,6 +131,32 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="confirmationDialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger font-weight-bold">
+                    CONFIRMATION REQUIRED</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p><strong>Are you sure you want to delete <span class="text-primary">{{customer.firstName}} {{customer.lastName}}</span>?</strong>
+                </p>
+                <p>All information associated to this customer will be permanently deleted.</p>
+                <p><span class="text-danger">This operation can not be undone.</span></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-primary" id="cancelButton"
+                    data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(customer)"
+                    data-dismiss="modal">Delete</button>
             </div>
         </div>
     </div>
