--- a/src/app/pages/customer-list/customer-list.component.css
+++ b/src/app/pages/customer-list/customer-list.component.css
@@ -42,6 +42,10 @@ table {
 	padding: 8px 4px;
 	user-select: none;
 }
+.page-link.disabled {
+	cursor: default;
+	opacity: .3;
+}
 
 @media only screen and (max-width: 768px)  {
 
