--- a/src/app/pages/list-bill/list-bill.component.html
+++ b/src/app/pages/list-bill/list-bill.component.html
@@ -32,15 +32,12 @@
               </thead>
               <tbody>
                 <tr class="table__row" 
-                  *ngFor="let bill of billList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
+                  *ngFor="let bill of billList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection | slice:firstItem:lastItem">
                   <td *ngFor="let col of cols">
                     <input *ngIf="col.type === 'check'" [(ngModel)]="bill[col.key]" type="checkbox"
                       class="form-control-sm text-right" disabled>
                     <span *ngIf="col.type != 'check'">{{ bill[col.key] }}</span>
                   </td>
-                  <!--td *ngFor="let item of bill | keyvalue : originalOrder">
-                    {{item.value}}
-                  </td-->
                   <td>
                     <div class="btn-group" role="group">
                       <button type="button" [routerLink]="'/bill/'+bill.id" rel="tooltip" title="Edit this Bill"
@@ -63,6 +60,15 @@
             </table>
           </div>
         </div>
+
+        <nav aria-label="Page navigation example">
+          <ul class="pagination d-flex align-item-center justify-content-center">
+              <li class="page-item" *ngFor="let n of numSequence(pages); let j = index;">
+                <a class="page-link" (click)="changePageNumber(j+1)">{{ j + 1 }}</a>
+              </li>
+          </ul>
+        </nav>
+
       </div>
     </div>
   </div>
