--- a/src/app/pages/list-category/list-category.component.html
+++ b/src/app/pages/list-category/list-category.component.html
@@ -35,7 +35,7 @@
 
               <tbody>
                 <tr class="table__row" 
-                  *ngFor="let category of categoryList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection">
+                  *ngFor="let category of categoryList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection | slice:firstItem:lastItem">
                   <td *ngFor="let col of cols">
                     <span>{{ category[col.key] }}</span>
                   </td>
@@ -61,6 +61,15 @@
             </table>
           </div>
         </div>
+
+        <nav aria-label="Page navigation example">
+          <ul class="pagination d-flex align-item-center justify-content-center">
+              <li class="page-item" *ngFor="let n of numSequence(pages); let j = index;">
+                <a class="page-link" (click)="changePageNumber(j+1)">{{ j + 1 }}</a>
+              </li>
+          </ul>
+        </nav>
+        
       </div>
     </div>
   </div>
