--- a/src/app/pages/list-product/list-product.component.html
+++ b/src/app/pages/list-product/list-product.component.html
@@ -33,7 +33,7 @@
 
               <tbody>
                 <tr class="table__row" 
-                  *ngFor="let product of productList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection ">
+                  *ngFor="let product of productList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection | slice:firstItem:lastItem">
                   <td *ngFor="let col of cols">
                     <input *ngIf="col.type === 'check'" [(ngModel)]="product[col.key]" type="checkbox"
                       class="form-control-sm text-right" disabled>
@@ -61,6 +61,15 @@
             </table>
           </div>
         </div>
+
+        <nav aria-label="Page navigation example">
+          <ul class="pagination d-flex align-item-center justify-content-center">
+              <li class="page-item" *ngFor="let n of numSequence(pages); let j = index;">
+                <a class="page-link" (click)="changePageNumber(j+1)">{{ j + 1 }}</a>
+              </li>
+          </ul>
+        </nav>
+
       </div>
     </div>
   </div>
