--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,3 +138,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         opacity: 1;
     }
 }
+
+.page-item {
+    cursor: pointer;
+}
