--- a/src/app/page/edit/edit-bill/edit-bill.component.html
+++ b/src/app/page/edit/edit-bill/edit-bill.component.html
@@ -5,14 +5,14 @@
           <label for="orderId">Rendelés ID</label>
           <input name="orderId" id="orderId" [(ngModel)]="bill.orderID" type="number" class="form-control" required>
           <div [hidden]="billForm.controls.orderId?.valid || billForm.controls.orderId?.pristine" class="error-message">
-            Hiányzó típus!
+            Hiányzó id!
           </div>
         </div>        
         <div class="form-group">
           <label for="amount">Összeg</label>
           <input name="amount" id="amount" rows="2" class="form-control" [(ngModel)]="bill.amount" type="number" required>
           <div [hidden]="billForm.controls.amount?.valid || billForm.controls.amount?.pristine" class="error-message">
-            Hiányzó leírás!
+            Hiányzó adat!
           </div>
         </div>
         <div class="form-group">
@@ -23,7 +23,7 @@
             <option value="paid">Paid</option>
           </select>
           <div [hidden]="billForm.controls.status?.valid || billForm.controls.status?.pristine" class="error-message">
-            Hiányzó leírás!
+            Hiányzó adat!
           </div>
         </div>
         <button [disabled]="billForm.invalid || updating" type="submit" class="btn btn-primary btn-block">
