--- a/src/app/page/listing/listing-bill/listing-bill.component.html
+++ b/src/app/page/listing/listing-bill/listing-bill.component.html
@@ -49,27 +49,8 @@
                     {{ col.text }}
                 </th>
                 <th class="d-flex justify-content-end mr-5">Műveletek</th>
-                <!-- <th (click)="onColumnSelect('id')"> <b>#</b></th>
-                    <th (click)="onColumnSelect('orderID')"><b style="font-size: 18px">Rendelés azonosító</b></th>
-                    <th (click)="onColumnSelect('amount')"><b style="font-size: 18px">Összeg (Ft)</b></th>
-                    <th (click)="onColumnSelect('status')"><b style="font-size: 18px">Státusz</b></th> -->
-                <!-- <th><i *ngIf="!direction" class="material-icons">keyboard_arrow_up</i>
-                        <i *ngIf="direction" class="material-icons">keyboard_arrow_down</i>
-                    </th> -->
             </tr>
         </thead>
-        <!-- <thead class="mat-sort-header">
-                <tr> -->
-        <!-- <th *ngFor="let col of cols" (click)="onColumnSelect('columnKey')">{{ col.text }}</th> -->
-        <!-- <th (click)="onColumnSelect('id')">ID</th>
-                    <th (click)="onColumnSelect('orderID')">Order ID</th>
-                    <th (click)="onColumnSelect('amount')">Amount</th>
-                    <th (click)="onColumnSelect('status')">Status</th> -->
-        <!-- <th><i *ngIf="!direction" class="fa fa-arrow-up"></i>
-                        <i *ngIf="direction" class="fa fa-arrow-down"></i>
-                    </th>
-                </tr>
-            </thead> -->
         <tbody>
 
             <tr class="tablerow"
@@ -94,7 +75,6 @@
     <div class="table-responsive">
         <table class="table" id="summaries">
             <thead class="bg-dark text-light">
-                <!-- <th style="font-size: 18px">Összes számla</th> -->
                 <div class="ml-3" *ngIf="numberOfAllBills$ | async">
                     ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes számla: {{ numberOfAllBills$ | async }}</b></p>
                 </div>
@@ -105,7 +85,8 @@
                 <th></th>
                 <div class="ml-3" *ngIf="sumOfUnpaidBills$ | async | hunFormat">
                     ͏͏͏͏͏͏͏<p>
-                        <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async }} Ft
+                        <b style="font-size: 18px">Fizetetlen számlák összege: {{ sumOfUnpaidBills$ | async | hunFormat
+                            }} Ft
                         </b>
                     </p>
                 </div>
