--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -102,48 +102,48 @@
       </tr>
     </tbody>
   </table>
-  <div class="table-responsive">
+  <div>
     <table class="table" id="summaries">
       <thead class="bg-dark text-light">
         <tr>
+          <!-- <th></th>
           <th></th>
           <th></th>
-          <th></th>
-          <th></th>
+          <th></th> -->
           <div class="row mt-4 d-flex justify-content-space-evenly">
             <th></th>
             <div *ngIf="numberOfAllOrders$ | async">
               <p>
 
-                <b style="font-size: 18px">
+                <b class="mx-5" style="font-size: 18px">
                   ͏͏͏͏͏͏͏Összes rendelések száma: {{ numberOfAllOrders$ | async }}</b
                 >
               </p>
             </div>
+            <!-- <th></th>
             <th></th>
-            <th></th>
-            <th></th>
+            <th></th> -->
             <div *ngIf="numberOfShippedOrders$ | async">
               <p>
-                <b style="font-size: 18px"
+                <b class="mx-5" style="font-size: 18px"
                   >Kiszállított rendelések száma:
                   {{ numberOfShippedOrders$ | async }}</b
                 >
               </p>
             </div>
+            <!-- <th></th>
             <th></th>
-            <th></th>
-            <th></th>
+            <th></th> -->
             <div *ngIf="numberOfUnpaidOrders$ | async">
               <p>
-                <b style="font-size: 18px">
+                <b class="mx-5"style="font-size: 18px">
                   ͏͏͏͏͏͏͏Még nem fizetett rendelések száma:
                   {{ numberOfUnpaidOrders$ | async }}</b
                 >
               </p>
             </div>
-            <th></th>
-            <th></th>
+            <!-- <th></th>
+            <th></th> -->
           </div>
         </tr>
       </thead>
