--- a/src/app/page/listing/listing-product/listing-product.component.scss
+++ b/src/app/page/listing/listing-product/listing-product.component.scss
@@ -23,7 +23,7 @@ th {
 tbody > tr > td {
 
   height:20px;
-  padding:0px;
+  padding:10px;
   border-top: 0px;
 }
 
@@ -33,5 +33,12 @@ tbody > tr > td {
   position: fixed;
   bottom: 50px;
   right: 0px;
-  
+  opacity: 0.7;
 }
+
+
+.jump-top i:hover {
+  opacity: 1;
+}
+
+
