--- a/src/app/page/listing/listing-customer/listing-customer.component.html
+++ b/src/app/page/listing/listing-customer/listing-customer.component.html
@@ -1,3 +1,26 @@
+<!-- ez itt a modal kódja ***************** -->
+
+<ng-template #content let-modal  class="shadow-lg">
+   <div class="modal-header">
+    <h3 class="modal-title ml-3 my-1" id="modal-title">{{ modalTitle }}</h3>
+  </div>
+  <div class="modal-body ml-3 mt-2">
+    <p><strong>{{ modalText[0] }}<span class="text-primary">{{ modalText[1] }}</span>{{ modalText[2] }}</strong></p>
+    <p>{{ modalText[3] }}
+      <br>
+      <br>
+     <strong><span class="text-danger">{{ modalText[4] }}</span></strong>
+    </p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss(false)">Cancel</button>
+    <!-- <button type="button" class="btn btn-danger" (click)="modal.close(true)">Ok</button> -->
+    <button type="button" class="btn btn-danger" (click)="modal.close(true)" (click)="onRemove(whatToRemove)">Ok</button>
+  </div>
+</ng-template>
+
+<!-- modal vége ***************** -->
+
 <div class="container top">
   <a class="jump-top" href="customers#top"><i class="fa fa-arrow-circle-up"></i></a>
   <div class="row">
@@ -72,9 +95,13 @@
             <button [routerLink]="[customer.id]" class="btn btn-info">
               <i class="material-icons">edit</i>
             </button>
-            <button (click)="onRemove(customer)" class="btn btn-danger">
+            <!-- <button (click)="onRemove(customer)" class="btn btn-danger">
+              <i class="material-icons">delete_outline</i>
+            </button> -->
+            <button (click)="log(customer)" (click)="open(content)" class="btn btn-danger">
               <i class="material-icons">delete_outline</i>
             </button>
+
           </div>
         </td>
       </tr>
