--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,17 +1,12 @@
 <div class="container top">
     <a class="jump-top" href="products#top"><i class="fa fa-arrow-circle-up"></i></a>
-    <div class="row">
-        <div class="col-4 offset-5 mb-3 mt-0">
-            <h2>TERMÉKEK</h2>
-        </div>
-
+    <div class="row d-flex justify-content-center">
+        <h2>TERMÉKEK</h2>
         <div class="col-12 my-3 mb-3">
             <button class="btn btn-success btn-block mt-3 mb-3" style="font-size:14px" [routerLink]="[0]">
                 <i class="material-icons">add</i> ÚJ TÉTEL LÉTREHOZÁSA
             </button>
         </div>
-
-
         <div class="col-3 mt-0 mb-3">
             <select [(ngModel)]="filterKey" class="custom-select bg-light" style="font-size: 20px">
                 <option *ngFor="let col of cols" [value]="col.key">
@@ -19,7 +14,6 @@
                 </option>
             </select>
         </div>
-
         <div class="col-4 search-bar mt-0 mb-3">
             <form class="form-inline my-2 my-lg-0">
                 <input (keyup)="onChangePhrase($event)" class="form-control mr-sm-2" type="text"
@@ -29,87 +23,121 @@
                 </button>
             </form>
         </div>
-
         <div class="col-5 mt-0 mb-5 d-flex justify-content-end">
-            <button class="btn btn-success my-2 my-sm-0" (click)="scroll('summaries')">STATISZTIKA</button>
+            <button class="btn btn-success my-2 my-sm-0" (click)="scroll('tfoot')">STATISZTIKA</button>
         </div>
     </div>
-
-    <table class="table table-striped">
-        <thead class="bg-dark text-light">
-            <tr>
-                <th (click)="onColumnSelect(col.key)" *ngFor="let col of cols"><b>
-                        <span *ngIf='col.key === sortedColumn && !firstSorting'>
-                            <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
-                            <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
-                        </span>
-
-                        {{ col.text }}
-                    </b></th>
-                <th><b>Műveletek</b></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="tablerow" style="padding-bottom: 1px;"
-                *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder ">
-                <td>
-                    <span>{{ product.id }}</span>
-                </td>
-                <td>{{product.name}} </td>
-                <td>{{product.type}}</td>
-                <td>{{product.catId}}</td>
-                <td>{{product.description}}</td>
-                <td>{{product.price | hunFormat }}</td>
-                <td>
-                    <input class="form-control form-control-sm" [(ngModel)]="product.featured" type="checkbox" disabled>
-                </td>
-                <td><input class="form-control form-control-sm" [(ngModel)]="product.active" type="checkbox" disabled>
-                </td>
-                <td>{{product.operations}}
-                    <div class="btn-group d-flex justify-content-end">
-                        <button [routerLink]="[product.id]" class="btn btn-info">
-                            <i class="material-icons">edit</i>
-                        </button>
-                        <button (click)="onRemove(product)" class="btn btn-danger">
-                            <i class="material-icons">delete_outline</i>
-                        </button>
-                    </div>
-                </td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-
-    <div class="table-responsive">
-        <table class="table" id="summaries">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <div *ngIf="numberOfAllProducts$ | async">
-                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Összes termék: {{ numberOfAllProducts$ | async }}</b></p>
-                    </div>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <div *ngIf="(numberOfFeaturedProducts$ | async) !==-1">
-                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px"> Kiemelt termékek száma: {{ numberOfFeaturedProducts$ |
-                                async }}
-                            </b></p>
-                    </div>
-                    <th></th>
-                    <div *ngIf="numberOfActiveProducts$ | async">
-                        ͏͏͏͏͏͏͏<p> <b style="font-size: 18px">Aktív termékek száma: {{ numberOfActiveProducts$ | async
-                                }}</b></p>
-                    </div>
-                </tr>
-            </thead>
-            <tbody>
-        </table>
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-striped table-responsive" id="table">
+                <thead class="bg-dark text-light">
+                    <tr>
+                        <th (click)="onColumnSelect('id')" style="width:5%">
+                            <span *ngIf='"id" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            #
+                        </th>
+                        <th (click)="onColumnSelect('name')">
+                            <span *ngIf='"name" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Termék név
+                        </th>
+                        <th (click)="onColumnSelect('type')" style="width:8%">
+                            <span *ngIf='"type" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Típus
+                        </th>
+                        <th (click)="onColumnSelect('catId')" style="width:8%">
+                            <span *ngIf='"catId" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            CatId
+                        </th>
+                        <th (click)="onColumnSelect('description')" style="width:30%">
+                            <span *ngIf='"description" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Leírás
+                        </th>
+                        <th (click)="onColumnSelect('price')">
+                            <span *ngIf='"price" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Ár
+                        </th>
+                        <th (click)="onColumnSelect('featured')" style="width:10%">
+                            <span *ngIf='"featured" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Kiemelt
+                        </th>
+                        <th (click)="onColumnSelect('active')" style="width:10%">
+                            <span *ngIf='"active" === sortedColumn && !firstSorting'>
+                                <i *ngIf="!direction" class="fa fa-sort-alpha-desc"></i>
+                                <i *ngIf="direction" class="fa fa-sort-alpha-asc"></i>
+                            </span>
+                            Aktív
+                        </th>
+                        <th>Műveletek</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr
+                        *ngFor="let product of productList | async | filter:filterKey:phrase | sorter:sortedColumn:sortedOrder">
+                        <td>{{ product.id }}</td>
+                        <td>{{ product.name }}</td>
+                        <td>{{ product.type }}</td>
+                        <td>{{ product.catId }}</td>
+                        <td>{{ product.description }}</td>
+                        <td>{{ product.price | hunFormat}}</td>
+                        <td>
+                            <div *ngIf="product.featured" style="text-align: center;"><i class="fa fa-check"></i></div>
+                            <div *ngIf="!product.featured" style="text-align: center;"><i class="fa fa-times"></i></div>
+                        </td>
+                        <td>
+                            <div *ngIf="product.active" style="text-align: center;"><i class="fa fa-check"></i></div>
+                            <div *ngIf="!product.active" style="text-align: center;"><i class="fa fa-times"></i></div>
+                        </td>
+                        <td class="td-actions text-right">
+                            <button type="button" rel="tooltip" class="btn btn-success btn-round mr-2"
+                                [routerLink]="[product.id]">
+                                <i class="material-icons">edit</i>
+                            </button>
+                            <button type="button" rel="tooltip" class="btn btn-danger btn-round"
+                                (click)="onRemove(product)">
+                                <i class="material-icons">close</i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot class="bg-dark text-light" id="tfoot">
+                    <tr>
+                        <td colspan="9">
+                            <div class="d-flex justify-content-around">
+                                <span *ngIf="numberOfAllProducts$ | async">
+                                    Összes termék: {{ numberOfAllProducts$ | async }}
+                                </span>
+                                <span *ngIf="numberOfFeaturedProducts$ | async">
+                                    Kiemelt termékek száma: {{ numberOfFeaturedProducts$ | async }}
+                                </span>
+                                <span *ngIf="numberOfActiveProducts$ | async">
+                                    Aktív termékek száma: {{ numberOfActiveProducts$ | async }}
+                                </span>
+                            </div>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
     </div>
 </div>
