--- a/src/app/page/listing/listing-product/listing-product.component.scss
+++ b/src/app/page/listing/listing-product/listing-product.component.scss
@@ -7,13 +7,6 @@
 .bg-dark:hover {
   cursor: pointer,
 }
-.material-icons {
-  font-size: 24px,
-}
-#arrow {
-  display: flex;
-  justify-content: flex-end,
-}
 
 th {
   user-select: none;
@@ -21,10 +14,14 @@ th {
 }
 
 tbody > tr > td {
-
   height:20px;
   padding:10px;
   border-top: 0px;
+}
+
+tfoot * {
+  user-select: none;
+  cursor: default;
 }
 
 .jump-top i {
@@ -32,13 +29,11 @@ tbody > tr > td {
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 0px;
+  right: 3%;
   opacity: 0.7;
+  z-index: 1;
 }
-
 
 .jump-top i:hover {
   opacity: 1;
 }
-
-
