--- a/src/app/page/listing/listing-order/listing-order.component.html
+++ b/src/app/page/listing/listing-order/listing-order.component.html
@@ -24,7 +24,7 @@
 <div class="container top">
   <a (click)="navigateToHeader(2000)" class="jump-top" href="orders#top"><i class="fa fa-arrow-circle-up"></i></a>
   <div class="row">
-    <div class="col-4 offset-5 mb-3 mt-0">
+    <div class="col-4 offset-4 text-center mb-3 mt-0">
       <h2>RENDELÉSEK</h2>
     </div>
 
