--- a/src/app/page/listing/listing-product/listing-product.component.html
+++ b/src/app/page/listing/listing-product/listing-product.component.html
@@ -1,5 +1,5 @@
-<div class="container top">
-    <a class="jump-top" href="products#top"><i class="fa fa-arrow-circle-up"></i></a>
+<div class="container" id="top">
+    <a class="jump-top" (click)="navigateToHeader(500)"><i class="fa fa-arrow-circle-up"></i></a>
     <div class="row d-flex justify-content-center">
         <h2>TERMÉKEK</h2>
         <div class="col-12 my-3 mb-3">
