--- a/src/app/page/listing/listing-bill/listing-bill.component.scss
+++ b/src/app/page/listing/listing-bill/listing-bill.component.scss
@@ -4,6 +4,10 @@
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+.bg-dark:hover {
+  cursor: pointer,
+} 
+
 th{
   user-select: none;
   
@@ -30,10 +34,23 @@ tbody > tr > td {
   font-size: 60px;
   position: fixed;
   bottom: 50px;
-  right: 0px;
+  right: 1%;
+  opacity: 0.7;
+  z-index: 1;
+  cursor: pointer;
 }
 
 .create{
   margin-top: 0;
   margin-bottom: 0;
  }
+ tfoot * {
+  user-select: none;
+  cursor: default;
+}
+
+tbody > tr > td {
+  height:20px;
+  padding:10px;
+  border-top: 0px;
+}
